# Biblioteca

./: CMakeLists.txt  README.md  main.cpp
datasets/: dataset1.csv  dataset2.csv  dataset3.csv
dominio/: alumno.cpp  alumno.h  libro.cpp  libro.h
servicios/: algoritmos.cpp  algoritmos.h
utilidades/: lectorLibros.cpp  lectorLibros.h
